--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,7 +1,8 @@
-name: TLADB
+name: MEDDL_3
 channels:
   - pytorch
   - dglteam
+  - nvidia
   - conda-forge
   - defaults
 dependencies:
@@ -28,16 +29,22 @@ dependencies:
   - brotlipy=0.7.0=py38h8df0ef7_1001
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.17.1=h36c2ea0_0
-  - ca-certificates=2022.6.15=ha878542_0
+  - ca-certificates=2023.01.10=h06a4308_0
   - cachetools=4.2.2=pyhd3eb1b0_0
   - cairo=1.16.0=h7979940_1007
-  - certifi=2022.6.15=py38h578d9bd_0
+  - certifi=2023.5.7=py38h06a4308_0
   - cffi=1.14.4=py38ha65f79e_1
   - chardet=4.0.0=py38h578d9bd_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - click=8.0.4=py38h06a4308_0
   - cloudpickle=2.1.0=pyhd8ed1ab_0
   - cryptography=3.3.1=py38h2b97feb_0
+  - cuda-cudart=11.7.99=0
+  - cuda-cupti=11.7.101=0
+  - cuda-libraries=11.7.1=0
+  - cuda-nvrtc=11.7.99=0
+  - cuda-nvtx=11.7.91=0
+  - cuda-runtime=11.7.1=0
   - cudatoolkit=11.3.1=h2bc3f7f_2
   - cycler=0.10.0=py_2
   - cytoolz=0.11.0=py38h7b6447c_0
@@ -54,6 +61,7 @@ dependencies:
   - et_xmlfile=1.0.1=py_1001
   - expat=2.2.9=he1b5a44_2
   - ffmpeg=4.3.1=hca11adc_2
+  - filelock=3.9.0=py38h06a4308_0
   - fontconfig=2.13.1=h736d332_1003
   - freetype=2.10.4=h7ca028e_0
   - frozenlist=1.2.0=py38h7f8727e_0
@@ -62,6 +70,7 @@ dependencies:
   - gettext=0.19.8.1=h0b5b191_1005
   - glib=2.66.4=hcd2ae1e_1
   - gmp=6.2.1=h58526e2_0
+  - gmpy2=2.1.2=py38heeb90bb_0
   - gnutls=3.6.13=h85f3911_1
   - google-auth=2.6.0=pyhd3eb1b0_0
   - google-auth-oauthlib=0.4.1=py_2
@@ -108,7 +117,13 @@ dependencies:
   - libblas=3.9.0=6_mkl
   - libcblas=3.9.0=6_mkl
   - libclang=11.0.0=default_ha5c780c_2
+  - libcublas=11.10.3.66=0
+  - libcufft=10.7.2.124=h4fbf590_0
+  - libcufile=1.6.1.9=0
+  - libcurand=10.3.2.106=0
   - libcurl=7.71.1=hcdd3856_8
+  - libcusolver=11.4.0.1=0
+  - libcusparse=11.7.4.91=0
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=h516909a_1
   - libevent=2.1.10=hcdb4288_3
@@ -124,6 +139,8 @@ dependencies:
   - libllvm10=10.0.1=he513fc3_3
   - libllvm11=11.0.0=he513fc3_0
   - libnghttp2=1.41.0=h8cfc5f6_2
+  - libnpp=11.7.4.75=0
+  - libnvjpeg=11.8.0.2=0
   - libogg=1.3.4=h7f98852_0
   - libopencv=4.5.0=py38_5
   - libopus=1.3.1=h7f98852_1
@@ -153,6 +170,9 @@ dependencies:
   - matplotlib-base=3.3.3=py38h5c7f4ab_0
   - mistune=0.8.4=py38h25fe258_1002
   - mkl=2020.4=h726a3e6_304
+  - mpc=1.1.0=h10f8cd9_1
+  - mpfr=4.0.2=hb69a4c5_1
+  - mpmath=1.2.1=py38h06a4308_0
   - multidict=5.2.0=py38h7f8727e_2
   - mysql-common=8.0.22=ha770c72_1
   - mysql-libs=8.0.22=h1fd7589_1
@@ -177,7 +197,7 @@ dependencies:
   - opencv=4.5.0=py38_5
   - openh264=2.1.1=h780b84a_0
   - openpyxl=3.0.6=pyhd3eb1b0_0
-  - openssl=1.1.1q=h7f8727e_0
+  - openssl=1.1.1t=h7f8727e_0
   - packaging=20.8=pyhd3deb0d_0
   - pandas=1.2.2=py38h51da96c_0
   - pandoc=2.11.3.2=h7f98852_0
@@ -218,7 +238,8 @@ dependencies:
   - python=3.8.6=hffdb5ce_4_cpython
   - python-dateutil=2.8.1=py_0
   - python_abi=3.8=1_cp38
-  - pytorch=1.11.0=py3.8_cuda11.3_cudnn8.2.0_0
+  - pytorch=2.0.1=py3.8_cuda11.7_cudnn8.5.0_0
+  - pytorch-cuda=11.7=h778d358_5
   - pytorch-mutex=1.0=cuda
   - pytz=2020.5=pyhd8ed1ab_0
   - pywavelets=1.3.0=py38h7f8727e_0
@@ -242,6 +263,7 @@ dependencies:
   - six=1.15.0=pyh9f0ad1d_0
   - sniffio=1.2.0=py38h578d9bd_0
   - sqlite=3.34.0=h74cdb3f_0
+  - sympy=1.11.1=py38h06a4308_0
   - tensorboard=2.6.0=py_1
   - tensorboard-data-server=0.6.0=py38hca6d32c_0
   - tensorboard-plugin-wit=1.6.0=py_0
@@ -251,8 +273,9 @@ dependencies:
   - tifffile=2019.7.26.2=py38_0
   - tk=8.6.10=h21135ba_1
   - toolz=0.12.0=pyhd8ed1ab_0
-  - torchaudio=0.11.0=py38_cu113
-  - torchvision=0.12.0=py38_cu113
+  - torchaudio=2.0.2=py38_cu117
+  - torchtriton=2.0.0=py38
+  - torchvision=0.15.2=py38_cu117
   - tornado=6.1=py38h25fe258_0
   - tqdm=4.55.1=pyhd8ed1ab_0
   - traitlets=5.0.5=py_0
@@ -295,3 +318,4 @@ dependencies:
       - pyyaml==6.0
       - retrying==1.3.3
       - simpleitk==2.0.2
+prefix: /home/freddy/miniconda3/envs/MEDDL_3
